# svelte-langgraph

./: .dockerignore  .env.e2e  .env.example  .gitignore  .prototools  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  langgraph.json  main.py  oidc-config.json  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: settings.local.json
.github/: ci.yml
.github/workflows/: ci.yml  docker.yml
.moon/: tasks.yaml  toolchain.yml  workspace.yml
.moon/cache/: runReport.json
.moon/cache/states/: moonVersionCheck.json  projectsBuildData.json  setupToolchain-node-global.json  setupToolchain-python-global.json  workspaceGraph.json
.moon/hooks/: pre-commit.sh
.moon/tasks/: tag-prettier.yml  tag-sveltekit.yml  tag-vitest.yml
apps/backend/: .env.example  .gitignore  Dockerfile  README.md  langgraph.json  moon.yml  pyproject.toml
apps/backend/eval_tests/: conftest.py  test_graph.py
apps/backend/src/: auth.py  graph.py  init.py  main.py
apps/backend/src/django_app/: settings.py  urls.py
apps/backend/src/svelte_langgraph/: auth.py  graph.py  main.py  models.py  tools.py
apps/backend/src/weather/: models.py
apps/backend/src/weather/migrations/: 0001_initial.py  0002_auto_20250729_1607.py
apps/backend/tests/: __init__.py  conftest.py  test_auth.py  test_basic_conversation.py  test_graph.py  test_parallel_tool_calls.py  test_single_tool_call.py
apps/backend/tests/svelte_langgraph/: test_graph.py
apps/frontend/: .env.example  .env.test  .gitignore  Dockerfile  README.md  moon.yml  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.ts  vitest-setup-client.ts
apps/frontend/e2e/: .gitignore  README.md  auth.spec.ts  backend-integration.spec.ts  demo.test.ts  smoke.spec.ts
apps/frontend/messages/: en.json  hi.json  nl.json
e2e/: .gitignore  README.md  eslint.config.js  moon.yml  package.json  playwright.config.ts  tsconfig.json
e2e/src/: auth.spec.ts  backend-integration.spec.ts
e2e/src/fixtures/: auth.ts  (+2 more)
frontend/: package.json  pnpm-lock.yaml
frontend/src/: app.css  app.tailwind.css  auth.ts  hooks.server.ts
src/: auth.py  graph.py
(+135 files in other folders)
