[project]
name = "svelte-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "descope>=1.7.6",
    "langchain[openai]==0.3.27",
    "langgraph==0.6.8",
    "langgraph-cli[inmem]==0.4.2",
    "langgraph-api==0.4.31",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "ruff>=0.12.5",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.1",
    "httpx>=0.28.1",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
