[project]
name = "my-first-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "descope>=1.7.6",
    "langchain[openai]>=0.3.25",
    "langgraph>=0.5.4",
    "langgraph-cli[inmem]>=0.2.10",
    "langgraph-api>=0.2.92",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pyright>=1.1.403",
    "respx>=0.21.0",
    "ruff>=0.12.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
