[project]
name = "svelte-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "authlib>=1.4.0",
    "langchain[openai]==1.0.*",
    "langgraph==1.0.*",
    "langgraph-cli[inmem]==0.4.*",
    "langgraph-api==0.5.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "oidc-provider-mock>=0.3.0",
    "pyright>=1.1.403",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.12.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=svelte_langgraph --cov-branch --cov-report lcov --cov-report term --cov-report html"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
